update code in ClassLoadUtil.java